# wheresmymoney

./: .env.example  .gitignore  CNAME  LICENSE  PLAN.md  README.md  index.html  package.json  pyproject.toml  tsconfig.json
config/: deterministic_rules.example.json
scripts/: smoke_test.py  validate_target_config.py
src/: App.vue  api.charts.ts  categories.js  columns.ts  main.ts  parsing.ts  types.ts
src/components/: Categories.vue  HelloWorld.vue  Settings.vue
src/router/: index.ts
src/store/: index.ts
src/views/: Chart.vue  Chart2.vue  Table.vue
src/wheresmymoney/: __init__.py  categories.py  cli_import.py  cli_smoke_test.py  cli_validate_target_config.py  deterministic_rules.py  import_checkpoint.py  llm_categorizer.py  models.py  parsers.py  review_cli.py  runtime_config.py  sheet_writer.py  target_config.py
tests/: test_categories.py  test_cli_import.py  test_deterministic_rules.py  test_google_sheet_integration.py  test_llm_categorizer.py  test_models.py  test_parsers.py  test_review_cli.py  test_runtime_config.py  test_sheet_writer.py
